# DSA

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/DSA/: core.h  linkedlist.c  linkedlist.h  utility.c  utility.h
